# SOPMOA

./: .gitignore  CMakeLists.txt  README.md  query_generator.py  query_random.py  run_command.txt
.cache/clangd/index/: abstract_solver.h.95DEC38C905667A4.idx  common_inc.h.9F06FCA110BE97C3.idx  cost.h.54A7306E76684D1C.idx  data_io.cpp.166FCC2547794AB4.idx  data_io.h.E21136ADD008FBA2.idx  emoa.cpp.F7A3E45A6D60D7F9.idx  emoa.h.11BFE7C8DC6A25AC.idx  gcl.h.CC82EAB55FA62D99.idx  gcl_array.h.A3088DE5C9C42F48.idx  gcl_nwmoa.h.CE752268A2B4B710.idx  gcl_sopmoa.h.CF26A53CA1ACB598.idx  gcl_tree.h.D9C4C803F9110103.idx  graph.cpp.358E8FD83DA23CFA.idx  graph.h.449421B2017B440F.idx  heuristic.cpp.BFA1AB8453C1D4B3.idx  heuristic.h.D52C4FEBF482934D.idx  json.hpp.17821D4807886ECE.idx  label.h.16A852054D089CF6.idx  lazy_ltmoa.cpp.02A5D98399B02E02.idx  lazy_ltmoa.h.895155C18388EB6E.idx  lazy_ltmoa_array.cpp.EF6461E3E4894CC2.idx  lazy_ltmoa_array.h.03A1EC234762EAD9.idx  (+13 more)
inc/: common_inc.h
inc/algorithms/: abstract_solver.h  emoa.h  lazy_ltmoa.h  lazy_ltmoa_array.h  ltmoa.h  ltmoa_array.h  nwmoa.h  sopmoa.h  sopmoa_bucket.h
inc/problem/: graph.h  heuristic.h
inc/utils/: cost.h  data_io.h  label.h  linkedlist.h  pq_bucket.h
lib/json/: version.md
scen/: good.json  query.json  query1.json  query2.json  query3.json  query4.json  query5.json  query6.json
src/: main.cpp
src/algorithms/: emoa.cpp  lazy_ltmoa.cpp  lazy_ltmoa_array.cpp  ltmoa.cpp  ltmoa_array.cpp  nwmoa.cpp  sopmoa.cpp  sopmoa_bucket.cpp
src/problem/: graph.cpp  heuristic.cpp
src/utils/: data_io.cpp
(+5 files in other folders)
